--- a/src/components/Trade/TradeTabs/Transactions/Transactions.module.css
+++ b/src/components/Trade/TradeTabs/Transactions/Transactions.module.css
@@ -204,9 +204,9 @@ text-transform: capitalize;
 .mono_font{
   font-family: monospace;
 }
-.trade_header li:nth-of-type(1), .trade_header li:nth-of-type(2){
+/* .trade_header li:nth-of-type(1), .trade_header li:nth-of-type(2){
   text-align: center;
-}
+} */
 
 .trade_header li:nth-of-type(3), .trade_header li:nth-of-type(6), .trade_header li:nth-of-type(7){
   text-align: right;
@@ -222,11 +222,11 @@ text-transform: capitalize;
 
 
 
-
+/* 
 .portfolio_header li:nth-of-type(2), .portfolio_header li:nth-of-type(3){
   text-align: center;
 
-}
+} */
 
 .portfolio_header li:nth-of-type(4), .portfolio_header li:nth-of-type(7), .portfolio_header li:nth-of-type(8){
   text-align: right;
